add charts, update swagger
