# dao/dmodels/storage.go
@@ -1,6 +1,15 @@
 package dmodels
 
-const StorageTable = "storage"
+const (
+	StorageTable = "storage"
+
+	NodesStorageKey            = "nodes"
+	StakingProvidersStorageKey = "staking_providers"
+	ValidatorsStorageKey       = "validators"
+	StatsStorageKey            = "stats"
+	ValidatorStatsStorageKey   = "validator_stats"
+	ValidatorsMapStorageKey    = "validators_map"
+)
 
 type StorageItem struct {
 	Key   string `db:"stg_key"`
